# original

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  _iterator.h  algorithms.h  array.cpp  array.h  bitSet.h  blocksList.h  chain.h  cloneable.h  combinedIterator.h  comparator.h  config.h  container.h  couple.h  deque.h  doubleDirectionIterator.h  error.cpp  error.h  filter.h  filterStream.h  forwardChain.h  install.cmake  iterable.h  iterationStream.h  iterator.h  maths.cpp  maths.h  original.h  printable.h  prique.h  queue.h  randomAccessIterator.h  serial.h  singleDirectionIterator.h  stack.h  stepIterator.h  (+5 more)
.github/workflows/: basic-tests.yml  deploy-docs-existing-tags.yml  deploy-docs-latest.yml  deploy-docs-stable.yml  deploy-docs-tags.yml  full-tests.yml
cmake/: originalConfig.cmake.in
docs/: index.md
docs/html/: algorithms_8h_source.html  annotated.html  array_8h_source.html  bit_set_8h_source.html  blocks_list_8h_source.html  chain_8h_source.html  classes.html  classoriginal_1_1abs_transform-members.html  classoriginal_1_1abs_transform.html  classoriginal_1_1abs_transform__coll__graph.map  classoriginal_1_1abs_transform__coll__graph.md5  classoriginal_1_1abs_transform__inherit__graph.dot  classoriginal_1_1abs_transform__inherit__graph.map  classoriginal_1_1abs_transform__inherit__graph.md5  classoriginal_1_1add_opt_transform-members.html  classoriginal_1_1add_opt_transform.html  classoriginal_1_1add_opt_transform__coll__graph.dot  classoriginal_1_1add_opt_transform__coll__graph.md5  classoriginal_1_1add_opt_transform__inherit__graph.map  classoriginal_1_1add_transform-members.html  classoriginal_1_1add_transform.html  classoriginal_1_1add_transform__inherit__graph.map  classoriginal_1_1add_transform__inherit__graph.md5  classoriginal_1_1algorithms-members.html  classoriginal_1_1algorithms.html  classoriginal_1_1algorithms__coll__graph.map  classoriginal_1_1algorithms__coll__graph.md5  classoriginal_1_1array-members.html  classoriginal_1_1array.html  classoriginal_1_1array_1_1_iterator-members.html  classoriginal_1_1array_1_1_iterator.html  classoriginal_1_1array_1_1_iterator__coll__graph.map  classoriginal_1_1array_1_1_iterator__inherit__graph.dot  classoriginal_1_1array_1_1_iterator__inherit__graph.md5  classoriginal_1_1array__coll__graph.map  classoriginal_1_1array__coll__graph.md5  classoriginal_1_1array__inherit__graph.dot  classoriginal_1_1array__inherit__graph.map  classoriginal_1_1assign_opt_transform-members.html  classoriginal_1_1assign_opt_transform.html  (+394 more)
docs/latex/: algorithms_8h_source.tex  annotated.tex  array_8h_source.tex  bit_set_8h_source.tex  blocks_list_8h_source.tex  chain_8h_source.tex  classoriginal_1_1abs_transform.tex  classoriginal_1_1abs_transform.tex.tmp  classoriginal_1_1abs_transform__coll__graph.dot  classoriginal_1_1abs_transform__coll__graph.md5  classoriginal_1_1abs_transform__inherit__graph.md5  classoriginal_1_1add_opt_transform.tex  classoriginal_1_1add_opt_transform__coll__graph.dot  classoriginal_1_1add_opt_transform__coll__graph.md5  classoriginal_1_1add_transform.tex  classoriginal_1_1add_transform__coll__graph.md5  classoriginal_1_1algorithms.tex  classoriginal_1_1algorithms__coll__graph.dot  classoriginal_1_1algorithms__coll__graph.md5  classoriginal_1_1array.tex  classoriginal_1_1array_1_1_iterator.tex  classoriginal_1_1array_1_1_iterator__inherit__graph.dot  classoriginal_1_1array_1_1_iterator__inherit__graph.md5  classoriginal_1_1array__coll__graph.dot  classoriginal_1_1array__inherit__graph.md5  classoriginal_1_1assign_opt_transform.tex  classoriginal_1_1assign_opt_transform__inherit__graph.dot  classoriginal_1_1assign_opt_transform__inherit__graph.md5  classoriginal_1_1base_cloneable.tex  classoriginal_1_1base_cloneable__coll__graph.md5  classoriginal_1_1base_iterator.tex  classoriginal_1_1base_iterator__coll__graph.md5  classoriginal_1_1base_iterator__inherit__graph.md5  classoriginal_1_1bit_set.tex  classoriginal_1_1bit_set_1_1_iterator.tex  classoriginal_1_1bit_set_1_1_iterator__coll__graph.md5  classoriginal_1_1bit_set__inherit__graph.md5  classoriginal_1_1blocks_list.tex  classoriginal_1_1blocks_list_1_1_iterator.tex  classoriginal_1_1blocks_list_1_1_iterator__inherit__graph.md5  (+213 more)
src/: original.cpp  original.h
src/core/: RBTree.h  algorithms.h  allocator.h  array.h  autoPtr.h  baseArray.h  baseList.h  bitSet.h  blocksList.h  chain.h  cloneable.h  combinedIterator.h  comparable.h  comparator.h  config.h  container.h  containerAdapter.h  core.h  couple.h  deleter.h  deque.h  doubleDirectionIterator.h  error.h  filter.h  filterStream.h  forwardChain.h  hash.h  hashTable.h  iterable.h  iterationStream.h  iterator.h  map.h  maps.h  maths.h  optional.h  ownerPtr.h  printable.h  prique.h  queue.h  randomAccessIterator.h  (+15 more)
src/vibrant/: async.h  atomic.h  condition.h  (+9 more)
test/: test1.cpp  test2.cpp  test3.cpp  test4.cpp
test/legacy/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp
test/other/: CMakeLists.txt  test1.cpp  test4.cpp  test6.cpp  test7.cpp
test/unit_test/: CMakeLists.txt
test/unit_test/test_core/: CMakeLists.txt  test_JMap.cpp  test_JSet.cpp  test_algorithms.cpp  test_allocators.cpp  test_alternative.cpp  test_array.cpp  test_bitSet.cpp  test_blocksList.cpp  test_chain.cpp  test_cloneable.cpp  test_comparator.cpp  test_container.cpp  test_couple.cpp  test_deleter.cpp  test_deque.cpp  test_error.cpp  test_filter.cpp  test_filterStream.cpp  test_forwardChain.cpp  test_hash.cpp  test_hashMap.cpp  test_hashSet.cpp  test_iterator.cpp  test_maths.cpp  test_ownerPtr.cpp  test_printable.cpp  test_prique.cpp  test_queue.cpp  test_refCntPtr.cpp  test_serial.cpp  test_singleton.cpp  test_stack.cpp  test_transform.cpp  test_transformStream.cpp  test_treeMap.cpp  test_treeSet.cpp  test_tuple.cpp  test_types.cpp  test_vector.cpp  (+1 more)
test/unit_test/test_vibrant/: CMakeLists.txt  test_async.cpp  test_atomic.cpp  test_condition.cpp  test_coroutines.cpp  test_generators.cpp  test_mutex.cpp  test_semaphores.cpp  test_syncPoint.cpp  test_tasks.cpp  test_thread.cpp  test_zeit.cpp
(+32 files in other folders)
